fix overflow positioning

--- a/src/components/molecules/Modal/Modal.scss
+++ b/src/components/molecules/Modal/Modal.scss
@@ -1,8 +1,12 @@
 .modal {
-  background-color: blue;
+  background-color: grey;
   width: 500px;
+  max-width: 100%;
+  height: 500px;
   border-radius: 5%;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
+  transform: translate(-50%, -50%);
+  margin: auto;
 }
