--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
+html {
+  width: 100%;
+  overflow-x: hidden;
+}
+
 body {
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -7,6 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100%;
+  outline: 1px solid blue;
 }
 
 /* code {
